--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -27,7 +27,7 @@
 \Copyright{Alonso Gonz\'alez}%mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
 
 \subjclass{Security and privacy - Public key (asymmetric) techniques}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . E.g., cite as "F.1.1 Models of Computation". 
-\keywords{Ring Signatures, Bilinear Groups, Zero-Knowledge}% mandatory: Please provide 1-5 keywords
+\keywords{Ring Signatures, Bilinear Groups, Set-Membership Proofs, Non-Interactive Zero-Knowledge}% mandatory: Please provide 1-5 keywords
 % Author macros::end %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %Editor-only macros:: begin (do not touch as author)%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -129,11 +129,11 @@
 
 		\input{prelim/symm-gs}
 
-	\subsection{Boneh-Boyen Signatures} \label{sec:bbs}
+	\section{Boneh-Boyen Signatures} \label{sec:bbs}
     
             \input{prelim/bb-signatures}
 
-	 \section{Flawed Ring Signatures\protect\footnote{Both flaws were communicated to the respective authors.}\protect\footnote{In this section we use multiplicative notation for the group operations to keep the expressions as they appear in the original works.}}\label{sec:rs-flawed}
+	 \section{The Ring Signatures of Bose et al.~and of Gritti et al.\protect\footnote{Both flaws were communicated to the respective authors.}\protect\footnote{In this section we use multiplicative notation for the group operations to keep the expressions as they appear in the original works.}}\label{sec:rs-flawed}
     
         	 \input{prelim/flawed}
 
