--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -2,7 +2,7 @@
 
 We write PPT as a shortcut for probabilistic polynomial time Turing machine.
 
-Let $\ggen_a$ be some probabilistic polynomial time algorithm which on input $1^{\lambda}$, where $\lambda$ is the security parameter, returns the \emph{group key} which is the description of an asymmetric bilinear group $gk:=(q,\GG_1,\GG_2,\GG_T,e,\mathcal{P}_1,\mathcal{P},\mathcal{P}_T=e(\mathcal{P}_1,\mathcal{P}_2),q)$, where $\GG_1$, $\GG_2$,
+Let $\ggen_a$ be some PPT which on input $1^{\lambda}$, where $\lambda$ is the security parameter, returns the \emph{group key} which is the description of an asymmetric bilinear group $gk:=(q,\GG_1,\GG_2,\GG_T,e,\mathcal{P}_1,\mathcal{P}_2,\mathcal{P}_T=e(\mathcal{P}_1,\mathcal{P}_2),q)$, where $\GG_1$, $\GG_2$,
 and $\GG_T$ are groups of prime order $q$, the element $\mathcal{P}_s$ is a generator of 
 $\GG_s$, and $e:\GG_1\times\GG_2\to\GG_T$ is an efficiently computable and non-degenerated bilinear map. We will use additive notation for the group operation of all groups.
 
