--- a/prelim/symm-gs.tex
+++ b/prelim/symm-gs.tex
@@ -12,7 +12,7 @@ of equation (\ref{gseq}) using the GS commitments, and then computes a proof tha
 
 GS proofs are perfectly sound when the CRS is sampled from the perfectly binding distribution, and perfectly witness-indistinguishable when sampled from the perfectly hiding distribution. Computational indistinguishability of  both distributions implies either perfect soundness and computational witness indistinguishability or computational soundness and perfect witness-indistinguishability.
 
-\subsubsection{Groth-Sahai Commitments.}
+\subsection{Groth-Sahai Commitments.}
 Following Groth and Sahai's work \cite{EC:GroSah08}, in symmetric groups and using the SXDH assumption, GS commitments are vectors in $\GG^2_1$ or $\GG_2^2$ of the form
 \begin{align*}
 &\GS.\Com_{ck_1}([x]_1;\vecb{r}):=\pmatri{{[0]_1}\\{[x]_1}}+r_1[\vecb{u}_1]_1+{r}_2[\vecb{u}_2]_1\\
