--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % !TEX root = ./main-ring-signature.tex
 
-Ring signatures, introduced by Rivest, Shamir and Tauman (ASIACRYPT 2001), allow to sign a message on behalf of a set of users while guaranteeing authenticity and anonymity. In terms of efficiency, two of the shortest ring signatures are of size $\Theta(\log n)$, where $n$ is the number of users, and are due to Groth and Kohlweiss (EUROCRYPT 2015) and Libert et al.~(EUROCRYPT 2016). An even shorter ring signature, of size independent from the number of users, was recently proposed by Malavolta and  Schr\"oder (ASIACRYPT 2017).
+Ring signatures, introduced by Rivest, Shamir and Tauman (ASIACRYPT 2001), allow to sign a message on behalf of a set of users while guaranteeing authenticity and anonymity. In terms of efficiency, two of the shortest ring signatures,  of size logarithmic in the number of users, were constructed by Groth and Kohlweiss (EUROCRYPT 2015) and Libert et al.~(EUROCRYPT 2016). An even shorter ring signature, of size independent from the number of users, was recently proposed by Malavolta and  Schr\"oder (ASIACRYPT 2017).
 The former schemes are both proven secure in the random oracle model while the later requires non-falsifiable assumptions.
-Under more standard assumptions Chase and Lysyanskaya proposed a constant-size, but impractical, size ring signature that requires simulation sound NIZK proofs systems for circuit satisfiability.
-The most practical construction remains the one of Chandran et al.~(ICALP 2007) with a signature of size $\Theta(\sqrt{n})$ and security based on the Diffie-Hellman assumption in bilinear groups.
+Under more standard assumptions Chase and Lysyanskaya (CRYPTO 2006) proposed a constant-size, but impractical, ring signature that requires simulation sound NIZK proofs systems for circuit satisfiability.
+The most practical construction remains the one of Chandran et al.~(ICALP 2007) with a signature of size $\Theta(\sqrt{n})$, where $n$ is the number of users, and security based on the Diffie-Hellman assumption in bilinear groups.
 
 In this work we construct an asymptotically shorter ring signature without random oracles or non-falsifiable assumptions. Its security is proven under the hardness of the permutation pairing assumption, a falsifiable assumption in bilinear groups introduced by Groth and Lu (ASIACRYPT 2007).
  Each signature comprises $\Theta(\sqrt[3]{n})$ group elements, signing a message requires computing $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairing operations. To the best of our knowledge, this is the first practical ring signature with $o(\sqrt{n})$ signatures and sublinear verification time.
