--- a/appendix/asymm-hash.tex
+++ b/appendix/asymm-hash.tex
@@ -18,7 +18,7 @@ $$ and $\KGen=\ggen_s$, and the function is defined as
 $$
 h(A,B):= \sum_{[\vecb{a}]_1\in A}[\vecb{a}]_1.
 $$
-Given $(A,B)\gets Q_m$ and a second preimage $(A',B')\in Q_m$ of $h(A,B)$, it is trivial to construct an adversary breaking the $m$-aPPA assumption. Indeed, given $[\matr{A}]_1,[\vecb{b}]\in\GG_1^{2\times m}\times \GG_2^{1\times m}$ the challenge of the $m$-aPPA assumption, then any matrix $[\matr{A}']$ and any row vector $[\vecb{b}']$ whose columns are the elements of, respectively, $A'$ and $B$, breaks $m$-PPA assumption. Then for any adversary $\advA$ there is an adversary $\advB$ such that $\adv^{\mathsf{aPre}_g}(\advA)=\adv_{m\mbox{-}\mathsf{PPA}}(\advB)$.
+Given $(A,B)\gets Q_m$ and a second preimage $(A',B')\in Q_m$ of $h(A,B)$, it is trivial to construct an adversary breaking the $m$-PPA assumption. Indeed, given $[\matr{A}]_1,[\vecb{b}]\in\GG_1^{2\times m}\times \GG_2^{1\times m}$ the challenge of the $m$-PPA assumption, then any matrix $[\matr{A}']$ and any row vector $[\vecb{b}']$ whose columns are the elements of, respectively, $A'$ and $B$, breaks $m$-PPA assumption. Then for any adversary $\advA$ there is an adversary $\advB$ such that $\adv^{\mathsf{aPre}_g}(\advA)=\adv_{m\mbox{-}\mathsf{PPA}}(\advB)$.
 
 We note that given $(A,B)\in Q_m,[\matr{A}]_1\in\GG^{2\times m},[\vecb{b}]_2\in\GG^{1\times m},[\vecb{x}]_2\in\GG^m$ and $[\vecb{y}]_1\in\GG_1^2,[\vecb{z}]_2\in\GG_2^2$ one can express the statements $A\in Q_m$, $g_{[\matr{A}]_1}([\vecb{x}]_2)=[\vecb{z}]_2$, and $h(A)=[\vecb{y}]_1$ as equations (\ref{eq:Q}),(\ref{eq:g}), and (\ref{eq:h}), respectively.
  \begin{align}
