--- a/our-construction/our-hashes.tex
+++ b/our-construction/our-hashes.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../main-ring-signature.tex
 
-We instantiate definition \ref{def:hash1} with the function $g$ and \ref{def:hash2}  with $h$ defined as follows. For  $h$, $\mathcal{M}=Q_m$ and $\mathcal{Y}=\GG_1^2$ and $\KGen=\ggen_a$, where
+We instantiate definition \ref{def:hash1} with the function $g$ and \ref{def:hash2}  with $h$ defined as follows. For  $h$, $\mathcal{M}=Q_m$, $\mathcal{Y}=\GG_1^2$, $\KGen=\ggen_a$, and
 \begin{align*}
-&h(A):= \sum_{([\vecb{a}]_1,[\vecb{a}]_2)\in A}[\vecb{a}]_1\\
+&h(A):= \sum_{([\vecb{a}]_1,[\vecb{a}]_2)\in A}[\vecb{a}]_1, \text{ where}\\
 &\mathcal{Q}_m := \{\matr{A}\in \Z_q^{2\times m}:A=(\vecb{a}_1\cat\cdots\cat\vecb{a}_m) \text{ and } \vecb{a}_i = (a_{i,1},a_{i,2})^\top \text{ s.t. } a_{i,2} = a_{i,1}^2\}\text{ and }\\
 &Q_m = \{A : \exists \matr{A}\in\mathcal{Q}_m\text{ s.t. } A' = \cup_{i=1}^m([\vecb{a}_i]_1,[\vecb{a}_i]_2)\}.
 \end{align*}
@@ -10,7 +10,7 @@ It might seem odd to define $Q_m$ as sets  of vectors in both groups while $h$ o
 
 Given a second preimage $h$, it is trivial to construct an adversary breaking the $m$-PPA assumption. Indeed, Let $[\matr{A}]_1,[\matr{A}]_2$ the challenge of the $m$-PPA assumption and let $A$ the set of columns of $[\matr{A}]_1$ and $[\matr{A}]_2$, which is clearly uniformly distributed in $Q_m$. Then given any $A'\in Q_m$ such that $A'\neq A$ and $h(A)=h(A')$, it holds that $[\matr{A}']_1$, the matrix whose columns are the first components of the elements of $A'$, is not a permutation of $[\matr{A}]_1$ and hence breaks $m$-PPA assumption. Then for any adversary $\advA$ there is an adversary $\advB$ such that $\adv^{\mathsf{aPre}_g}(\advA)=\adv_{m\mbox{-}\mathsf{PPA}}(\advB)$. 
 
-In the case of $g$, $\mathcal{M}=\GG^m_2$ and $\KGen$ picks a group description $gk\gets\ggen_a(1^\lambda)$ together with $[\matr{A}]_1\in\GG^{2\times m}_1$, where $\matr{A}\gets\mathcal{Q}_m$, and the function is defined as
+In the case of $g$, $\mathcal{M}=\GG^m_2$, $\mathcal{Y}=\GG_2^2$, and $\KGen$ picks a group description $gk\gets\ggen_a(1^\lambda)$ together with $[\matr{A}]_1\in\GG^{2\times m}_1$, where $\matr{A}\gets\mathcal{Q}_m$, and the function is defined as
 $$
 g_{[\matr{A}]_1}([\vecb{x}]_2):= [\matr{A}\vecb{x}]_2.
 $$
