--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -24,7 +24,7 @@ We note that no improvements in the
 signature size have been made within a decade. In fact, although two previous works claim to construct signatures of constant \cite{ACISP:BosDasRan15} or logarithmic \cite{IET:GriSusPla16} size, in Appendix \ref{sec:rs-flawed} we show that one construction fails to give a correct proof of security and the other is in fact of size $\Theta(n)$. The only (non-asymptotic) improvements we are aware of are \cite{TCC:Rafols15,AC:GonHevRaf15}.
 
 \subsection{Our contribution}
-In this work we present the first ring signature based on bilinear groups whose signature size is asymptotically smaller than Chandran et al.'s, and whose security is proven under falsifiable assumptions and without random oracles. Our ring signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings. Our ring signature is perfectly anonymous, i.e.~it completely hides the identity of the actual signer, and is computationally infeasible to forge signatures for non-members of the ring. A comparison of our ring signature and Chandran et al.'s is given in Table \ref{table:eff}.
+In this work we present the first ring signature based on bilinear groups whose signature size is asymptotically smaller than Chandran et al.'s, and whose security is proven under falsifiable assumptions and without random oracles. Our ring signature consists of $\Theta(\sqrt[3]{n})$ group elements, computing a signature requires $\Theta(\sqrt[3]{n})$ exponentiations, and verifying a signature requires $\Theta(n^{2/3})$ pairings. Our ring signature is perfectly anonymous, i.e.~it completely hides the identity of the actual signer, and is computationally infeasible to forge signatures for non-members of the ring. A comparison of our ring signature and Chandran et al.'s is given in Table \ref{table:eff} which summarizes a more detailed analysis found in Appendix \ref{sec:eff-analysis}.
 
 The security of our construction relies on a security assumption --- the {permutation pairing assumption} --- introduced by Groth and Lu \cite{AC:GroLu07} in an unrelated setting: proofs of correctness of a shuffle. While the assumption is ``non-standard'', in the sense that is not a ``DDH like'' assumption, it is a falsifiable assumption and it was proven hard in generic symmetric bilinear groups by Groth and Lu. We work on asymmetric groups (Type III groups \cite{EPRINT:GalPatSma06}) and thus we give a natural translation of the permutation pairing assumption which we also prove secure in generic asymmetric bilinear groups.
 
